  Pipe.

- Issue #12213: Fix a buffering bug with interleaved reads and writes that
  could appear on BufferedRandom streams.

- Issue #12650: Fix a race condition where a subprocess.Popen could leak
  resources (FD/zombie) when killed at the wrong time.

Tests
-----

- Issue #12821: Fix test_fcntl failures on OpenBSD 5.

Extension Modules
-----------------
 
- Issue #12950: Fix passing file descriptors in multiprocessing, under
  OpenIndiana/Illumos.

What's New in Python 3.2.2?
===========================

*Release date: 03-Sep-2011*

Core and Builtins
-----------------

- Issue #12326: sys.platform is now always 'linux2' on Linux, even if Python
  is compiled on Linux 3.

- Accept bytes for the AST string type. This is temporary until a proper fix in
  3.3.

Library
-------

- Issue #8286: The distutils command sdist will print a warning message instead
  of crashing when an invalid path is given in the manifest template.

- Issue #12841: tarfile unnecessarily checked the existence of numerical user
  and group ids on extraction. If one of them did not exist the respective id
  of the current user (i.e. root) was used for the file and ownership
  information was lost.

- Issue #10946: The distutils commands bdist_dumb, bdist_wininst and bdist_msi
  now respect a --skip-build option given to bdist.

- Issue #12839: Fix crash in zlib module due to version mismatch.
  Fix by Richard M. Tew.

Extension Modules
-----------------

- Issue #9651: Fix a crash when ctypes.create_string_buffer(0) was passed to
  some functions like file.write().



What's New in Python 3.2.2 release candidate 1?
===============================================

*Release date: 14-Aug-2011*

Core and Builtins
-----------------

- Issue #12732: In narrow unicode builds, allow Unicode identifiers which fall
  outside the BMP.

- Issue #11603: Fix a crash when __str__ is rebound as __repr__.  Patch by
  Andreas Stührk.
